# Melanie

./: CHANGELOG.md  DEPLOYMENT.md  DOCUMENTATION.md  Makefile  README.md  deploy.py  docker-compose.yml  launch_melanie_suite.py  pyproject.toml  requirements.txt
AI/: .env  light-search.py  medium-search.py  melanie-3-code.py  melanie-3-embedder.py  melanie-3-light.py  melanie-3-multimodal.py  melanie-3-reranker.py  melanie-3.py  melanie_embedding_model.py  melanie_multimodal_model.py  melanie_reranking_model.py  melanie_three_code_model.py  melanie_three_light_model.py  melanie_three_model.py  rag_integration_client.py
API/: .dockerignore  .env.example  API_DOCUMENTATION.md  API_DOCUMENTATION_INDEX.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_SUMMARY.md  DEEP_RESEARCH_ORCHESTRATION.md  Dockerfile  ERROR_RESPONSES_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLES.md  RATE_LIMITING_GUIDE.md  README.md  __init__.py  agent_scaling.py  auth.py  file_manager.py  health_monitor.py  mcp_config.py  mcp_endpoints.py  mcp_integration.py  memory_monitor.py  middleware.py  models.py  openapi_spec.yaml  research_orchestrator.py  run_server.py  server.py  tools.py
CLI/: .gitignore  Makefile  README.md  __init__.py  agent_coordinator.py  api_client.py  build.py  build_binary.py  cli_app.py  code_generator.py  config.py  main.py  plan_generator.py  requirements.txt  result_compiler.py  session.py  setup.py  tailscale_config.json  theme.py
Email/: .eslintrc.json  Makefile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
Email/.github/workflows/: build.yml
Email/scripts/: build-installers.js  build.js  dev.js
Email/src/: App.tsx
Email/src-tauri/: Cargo.toml  tauri.conf.json
Email/src-tauri/icons/: README.md
Email/src-tauri/src/: imap_manager.rs  main.rs
Email/src/components/email/: AIFeatures.tsx  AccountSetup.tsx  ComposeWindow.tsx  FolderTree.tsx  PreviewPane.tsx  ThreadList.tsx
Email/src/hooks/: useAIFeatures.ts  useIMAP.ts
Email/src/services/: aiService.ts  imapService.ts
Email/src/styles/: globals.css
Email/src/test/: setup.ts
Email/src/types/: imap.ts
Email/src/utils/: attachmentHandler.ts
RAG/: Cargo.toml  Dockerfile  README.md  README_PyO3.md  build_python_module.py  config.json  pyproject.toml
RAG/src/: cache.rs  chunker.rs  config.rs  embedder.rs  engine.rs  enhanced_cache.rs  error.rs  lib.rs  main.rs  performance.rs  python_bindings.rs  reranker.rs  types.rs  vector_store.rs
WEB/: .dockerignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
WEB/scripts/: build-production.js  start-server.js
WEB/src/app/: globals.css  layout.tsx  page.tsx
WEB/src/components/chat/: ArtifactCard.tsx  ChatArea.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx  StudiosPanel.tsx  TokenLimitModal.tsx
WEB/src/components/layout/: ChatLayout.tsx
WEB/src/lib/: api.ts
WEB/src/types/: api.ts  chat.ts
WEB/src/utils/: tokenCounter.ts
docs/: DEVELOPER_GUIDE.md  USER_GUIDES.md
file_storage/: files_db.json
file_storage/metadata/: 06c868f6-cab7-44de-96d5-2248f5347e73.json
file_storage/uploads/: 2de7c424-0562-4890-abb1-0f5929f2a39f.txt  9f23e7fe-66b4-4537-9754-91f8de62fccd.md
